# Recipe-Manager

./: .gitignore  ButtonStyled1.qml  CMakeLists.txt  CMakeLists.txt.qtds  LICENSE  Login.qml  Main.qml  NavButton.qml  README.md  RecipeCreator.qml  Recipes.qml  Settings.qml  Signup.qml  Start.qml  StyledTextField.qml  Theme.qml  ViewRecipe.qml  appcore.cpp  appcore.h  authhandler.cpp  authhandler.h  databasehandler.cpp  databasehandler.h  main.cpp  usersession.cpp  usersession.h
